@@ -5,14 +5,14 @@ DIST google-chrome-stable_11.0.696.65-r84435_amd64.deb 22098382 RMD160 124714069
 DIST google-chrome-stable_11.0.696.65-r84435_i386.deb 24044500 RMD160 30c761005935808170c9008b70bf7c23f3c25675 SHA1 1c418266678f24e24db59e9e4f5abed3a29dc302 SHA256 5eb2039ef9810b8701862c44289cc6718a936a9670a6d6e73570aa10048bd137
 DIST google-chrome-unstable_12.0.742.30-r84361_amd64.deb 22267878 RMD160 cca59cf53a29b2ee4c1308f79c040f980568e88d SHA1 4e17f688fcfa81b3b3b38342df279a4499a8c96b SHA256 073a8d79976a66f6102efd8ad09701298e9e4ba8269ceb03fe3137e194eeff73
 DIST google-chrome-unstable_12.0.742.30-r84361_i386.deb 24534080 RMD160 b4b02ec07c6ed4d0d0f6754a30712dd30902dcb9 SHA1 639a41fcbdb73f3e3132593e73b08b66ecad1551 SHA256 01c019b36703cd63650aee6561c8e47cae40fbee973f898c34cada9cdf0f56ac
-EBUILD google-chrome-11.0.696.65-r84435.ebuild 3969 RMD160 ccabd8f10c0cb49a785c7f5c3ea25ab46f9e5d09 SHA1 6ad92669969e59d0feeba100d62a5817931a8b51 SHA256 4f53a34c331f26287ba491d6db9b13b4c161aad45f09158b871211acffc2e1bd
-EBUILD google-chrome-12.0.742.30-r84361.ebuild 3971 RMD160 c393dac910ab1716ab8f87b47a5ce189823126e7 SHA1 8fc1011d8df1bd448af66ac8a1fb5ab472dd6c1b SHA256 bcefc90212bbbf66df16c49ca834ca3020bbb84ef57b87c30dc7089f2795d1d3
-MISC ChangeLog 1227 RMD160 0c770a6804f6f86bec18f88bbe7e16eeba2e85b4 SHA1 4e142cf197dce233a886c7985055cc5daf114d01 SHA256 79bfd907640382709d6de97dcd5fa57e234a3af3485f30fbf5734c228a8f4851
-MISC metadata.xml 387 RMD160 b870f41ac98357b111248d1590451abae2338919 SHA1 0d5ba4a953cd9432fa10bafbf633dc9e043b4455 SHA256 369912f6c33361210b8e413da0c6fce05c9c511a5825ef71f68de86d46aa2bad
+EBUILD google-chrome-11.0.696.65-r84435.ebuild 3281 RMD160 98aa4357e8fd49f6b418e0a0081e2b6164034e1e SHA1 f6243f1d8a4b049e82270bc2d1c2cc01080b9639 SHA256 123378eef6783bdf7ad7f6488e1b21d5f8f479965115b36dd5a8e3011a2d1d89
+EBUILD google-chrome-12.0.742.30-r84361.ebuild 3283 RMD160 daaa037746d65074ada6473052f9e70d8b1b3a6a SHA1 0a12fdf3addb119a0d184cd2df8b0a140ef303b8 SHA256 414aecead97a21b34e9a7a51c4616a1423cb91ef7eea11859f7a586f20b55264
+MISC ChangeLog 1377 RMD160 834524e8952dd28ebee748cb9b7d48e70ea0e860 SHA1 aec2dbad4d3bce2530474755ff05343976bb8b40 SHA256 5f6dc760d9dd99635f7842c9a60e2d118a97f4678e0030b5496c3b2ef8b0612d
+MISC metadata.xml 297 RMD160 8966e5b4c3746ee7cf40fef81cad93dfa2703e53 SHA1 7d096f4f0dd036f93e7daf012a1c628a657039c3 SHA256 e1c43be8d49551beb44bb1061702babfee89b6f057b52133172a702925c2c96f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk3GzsYACgkQknrdDGLu8JCGqgEAlBCqI0UFMo26omAXUvnz4Zd3
-CxkpueBjTV4FHcuTpaYBAIHu/B5aQ7g4aEu+hAS7/uHF+aTyeeswfJBHmxRO3jiN
-=EoK9
+iF4EAREIAAYFAk3IXJ0ACgkQknrdDGLu8JAXPwD/W5hRJMnZ+9H1N9H62V8Fe/dL
+373hRVQfR39PX5WSLEMA+wXPpLJzAW9ji1V+xbDt+jks2McXXS54mZhePFPIaVfv
+=6tvn
 -----END PGP SIGNATURE-----
